# tsticker-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
tsticker/: Cargo.toml
tsticker/src/: bot.rs  convert.rs  error.rs  lib.rs
