[package]
name = "tsticker-cli"
authors.workspace = true
description.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["string"]}
clap_derive = { version = "4.0.0-rc.1" }
human-panic = "2.0.1"
rustyline = "14.0.0"
tokio = { version = "1.39.2", features = ["full"] }
clap_complete_nushell = "4.5.3"
clap_complete = "4.5.17"
tsticker = { path ="../tsticker"}
indicatif = "0.17.8"
dialoguer = "0.11.0"
console = "0.15.8"
once_cell = "1.19.0"
async-channel = "2.3.1"
emojis = "0.6.3"
reqwest = { version = "0.12.5", default-features = false, features = ["stream", "rustls-tls-native-roots"] }
futures-util = "0.3.30"
futures = "0.3.31"
dotenv = "0.15.0"