[package]
name = "tsticker"
authors.workspace = true
description.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls-native-roots"] }
futures-util = "0.3.30"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
log = { version = "0.4.22", features = ["serde"] }
